added scope attribute to table headers; added installed packages to install info page

--- a/WikiPy/translations/en.json
+++ b/WikiPy/translations/en.json
@@ -1144,6 +1144,17 @@
             }
           }
         },
+        "python_packages": {
+          "title": "Installed Python packages",
+          "table": {
+            "package": {
+              "label": "Package"
+            },
+            "version": {
+              "label": "Version"
+            }
+          }
+        },
         "resources": {
           "table": {
             "name": {
